translated the titles of each diagram

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
   
 
 <div class="jumbotron">
-    <h2>People interviewed</h2>
+    <h2>Persone Intervistate</h2>
 </div>
 
 <div class="row">
@@ -15,7 +15,7 @@
 </div><br/>
 
 <div class="jumbotron">
-    <h2>Collection Point: Medio Campidano</h2>
+    <h2>Area geografica: Medio Campidano</h2>
 </div>
 
 <div class="row">
