--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <h1>Survey Questions</h1>
+        <h1>Questionario conoscitivo</h1>
         <!--<p>Questions to evaluate the side effects of drugs used in Sardinia</p>-->
         <ul class="list-unstyled">
  
@@ -12,13 +12,13 @@
                                 <!--<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>-->
                          </div>
                          <div class="col-md-4">
-                             <h2><%= link_to "Question #{idx}", question_path(idx) %></h2>
+                             <h2><%= link_to "Domanda #{idx}", question_path(idx) %></h2>
                              
                          </div>
                         
                    
                         <div class="btn-group q-btn">
-                                  <button type="button" class="btn btn-success">Show</button>
+                                  <button type="button" class="btn btn-success">Mostra</button>
                                   <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Toggle Dropdown</span>
@@ -33,7 +33,7 @@
                           </div>
                       
                         <div class="btn-group q-btn">
-                                  <button type="button" class="btn btn-info">Edit</button>
+                                  <button type="button" class="btn btn-info">Modifica</button>
                                   <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Toggle Dropdown</span>
@@ -48,7 +48,7 @@
                           </div>
                           
                          <div class="btn-group q-btn">
-                                  <button type="button" class="btn btn-danger">Delete</button>
+                                  <button type="button" class="btn btn-danger">Cancella</button>
                                   <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Toggle Dropdown</span>
