--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   
     <div class="col-md-8">
-        <h1 class="h1 question"><%="Question #{@question.qid}"%>
+        <h1 class="h1 question"><%="Domanda #{@question.qid}"%>
         <div id="q-arrows">
             <%= link_to questions_path do %>
                 <i class="fa fa-list" aria-hidden="true"></i>
@@ -29,7 +29,7 @@
 
         </h1>
         <div class="well question-block question-description">
-            <h3>Description</h3>
+            <h3>Descrizione</h3>
             <%= @question.qtext %>
         </div>
         <table class="table table-condensed table-hover">
@@ -51,7 +51,7 @@
 
 <div class = "row">
     <div class="col-md-8" <%= "id = q3bar" if @question.qid == 3 %>>
-        <h1 class='text-primary'>Answers</h1> <br/>
+        <h1 class='text-primary'>Risposte</h1> <br/>
           
          <% if @question.qid == 3 %>
              <%= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Drug by name", hAxis: {format: '0'}}) %>
@@ -98,11 +98,11 @@
         <!--<#% binding.pry %>
         <%# puts "subqid: #{sq.subid}" %>
         <%# puts "subq_mapping: #{@subq_mapping[sq.subid]}" %> -->
-        <h1 class="h1 question"><%="SubQuestion #{@subq_mapping[sq.subid]}"%>
+        <h1 class="h1 question"><%="Sottodomanda #{@subq_mapping[sq.subid]}"%>
 
         </h1>
         <div class="well question-block subquestion-description">
-            <h3>Description</h3>
+            <h3>Descrizione</h3>
             <%= sq.qtext %>
         </div>
         
@@ -124,20 +124,21 @@
     
     <div class = "row">
     <div class="col-md-8">
-        <h1 class='text-primary'>Answers</h1>
+        <h1 class='text-primary'>Risposte</h1>
     
          <% if (@subquestion_idx.include? sq.qid)  && sq.subid == 1 %>
             <% count_drugs, count_categories = sub_count(sq.qid, sq.subid)[1..2] %>
             <%#= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Drug by name", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'blue', fontSize: 10}}}) %>             
-            <%= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Drug by name", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>
-            <%= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Drug by category", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>             
+            <%= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Ripartizione per denominazione del farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>
+            <%= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Ripartizione per categoria di farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>             
             <%#= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Drug by category", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>         
          
          <% elsif sq.qid == 8%>
              <% count_prescriber, count_changer, count = get_prescriber(sq.qid, sq.subid) %>
-             <%= column_chart(count_prescriber, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Therapy Prescriber"} ) %>
-             <%= column_chart(count_changer, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Therapy Changer"}) %>
-             <%= bar_chart(count, colors: ["orange"], library: {backgroundColor: "#eee", title: "Therapy Modifications"})%>
+             <%# binding.pry %>
+             <%= column_chart(count_prescriber, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Prescrittore della terapia"} ) %>
+             <%= column_chart(count_changer, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Modificatore della terapia"}) %>
+             <%= bar_chart(count, colors: ["orange"], library: {backgroundColor: "#eee", title: "Prescrittore e Modificatore della terapia"})%>
          <% else %>
              <% counts = sub_count(sq.qid, sq.subid)[0] %>
              <%# binding.pry %>
