--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,10 +49,10 @@
                    <a href="/pages/home" class="dropdown" data-toggle="dropdown">Home</a>
                    <ul class="dropdown-menu">
                      <li><%#=link_to "Home", pages_home_path %></li>
-                     <li><%= link_to "Respondent Statistics", users_path %></li>
-                     <li><%= link_to "Questions", questions_path %></li>
-                     <li><%= link_to "Statistics", statistics_path %></li> 
-                     <li><%= link_to "Drug Effect Statistics", statistics_drugs_path %></li>
+                     <li><%= link_to "Analisi degli Intervistati", users_path %></li>
+                     <li><%= link_to "Quesiti", questions_path %></li>
+                     <li><%= link_to "Analisi degli indicatori", statistics_path %></li> 
+                     <li><%= link_to "Analisi delle problematiche", statistics_drugs_path %></li>
                    </ul>
                 </li>
                 <li><a href="#">About</a></li>                
