change page title

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <h1>Questionario conoscitivo</h1>
+        <h1>Quesiti</h1>
         <!--<p>Questions to evaluate the side effects of drugs used in Sardinia</p>-->
         <ul class="list-unstyled">
  
