change the title of index and drugs pages

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1>Indicatori Statistici</h1>
+    <h1>Analisi degli Indicatori</h1>
     <!--<h4 class="stat">Approach change after the interviews</h4> -->
 </div>
 
