--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
     </div>      
     <div class="col-md-6">
               <!--<h2 class="text-center">Geographical Area Of Interest</h2><br/>-->
-              <%#= image_tag "mdc1.jpg", size: "500x333", class: "homeimg" %>              
+              <%= image_tag "mdc1.jpg", size: "500x333", class: "homeimg" %>              
 
     </div>
     
