--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
                      <li><%= link_to "Quesiti", questions_path %></li>
                      <li><%= link_to "Analisi degli indicatori", statistics_path %></li> 
                      <li><%= link_to "Analisi delle problematiche", statistics_drugs_path %></li>
+                     <li><%= link_to "Analisi aggregata delle problematiche", statistics_aggregated_drugs_path %></li>                     
                    </ul>
                 </li>
                 <li><a href="#">About</a></li>                
