--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -54,10 +54,10 @@
         <h1 class='text-primary'>Risposte</h1> <br/>
           
          <% if @question.qid == 3 %>
-             <%= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Drug by name", hAxis: {format: '0'}}) %>
-            <%#= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Drug by name", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'red', fontSize: 10}}}) %>             
-             <%= bar_chart(@count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Drug by category"}) %> 
-            <%#= bar_chart(@count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Drug by category", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>             
+             <%= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '0'}}) %>
+            <%#= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'red', fontSize: 10}}}) %>             
+             <%= bar_chart(@count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica"}) %> 
+            <%#= bar_chart(@count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>             
         
 
         <% elsif @question.qid == 18 %>
@@ -128,10 +128,10 @@
     
          <% if (@subquestion_idx.include? sq.qid)  && sq.subid == 1 %>
             <% count_drugs, count_categories = sub_count(sq.qid, sq.subid)[1..2] %>
-            <%#= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Drug by name", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'blue', fontSize: 10}}}) %>             
+            <%#= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'blue', fontSize: 10}}}) %>             
             <%= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Ripartizione per denominazione del farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>
             <%= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Ripartizione per categoria di farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>             
-            <%#= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Drug by category", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>         
+            <%#= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>         
          
          <% elsif sq.qid == 8%>
              <% count_prescriber, count_changer, count = get_prescriber(sq.qid, sq.subid) %>
