--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -129,8 +129,8 @@
          <% if (@subquestion_idx.include? sq.qid)  && sq.subid == 1 %>
             <% count_drugs, count_categories = sub_count(sq.qid, sq.subid)[1..2] %>
             <%#= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'blue', fontSize: 10}}}) %>             
-            <%= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Ripartizione per denominazione del farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>
-            <%= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Ripartizione per categoria di farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>             
+            <%= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>
+            <%= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>             
             <%#= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>         
          
          <% elsif sq.qid == 8%>
