--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -3,15 +3,15 @@
     <!--<h4 class="stat">Approach change after the interviews</h4> -->
 </div>
 
-<h3 class="stat brown">Problematiche riconducibili a farmaci generici</h3>
+<h3 class="stat brown">Problematiche riconducibili a farmaci equivalenti</h3>
 <div class=well>
   <div class="row">
       <div class="col-md-6">
-         <%= pie_chart(@mycounts, library: {title: "Problematiche riconducibili all'uso di farmaci generici", pieSliceText: 'percentage'}) %>
+         <%= pie_chart(@mycounts, library: {title: "Problematiche riconducibili all'uso di farmaci equivalenti", pieSliceText: 'percentage'}) %>
       </div>
       <div class="col-md-6">
-         <%#= pie_chart(@mycounts, library: {title: "Problematiche riconducibili all'uso di farmaci generici", pieSliceText: 'value'}) %> 
-         <%= bar_chart @stacked_data, stacked: true, library: {title: "Problematiche riconducibili all'uso di farmaci generici suddivisi per genere"} %>
+         <%#= pie_chart(@mycounts, library: {title: "Problematiche riconducibili all'uso di farmaci equivalenti", pieSliceText: 'value'}) %> 
+         <%= bar_chart @stacked_data, stacked: true, library: {title: "Problematiche riconducibili all'uso di farmaci equivalenti suddivisi per genere"} %>
       </div>
     </div>
 
@@ -38,7 +38,7 @@
                         @vrange = (vmax..vmin).to_a 
                      end %>
         
-          <%= column_chart(@counts_by_genre[n - 1],  colors: ["#a48a9e"], library: {backgroundColor: "#eee", title: "Approccio positivo per genere", vAxis: {ticks: @vrange}}) %>
+          <%= column_chart(@counts_by_genre[n - 1],  colors: ["#a48a9e"], library: {backgroundColor: "#eee", title: "Suggerimento per genere", vAxis: {ticks: @vrange}}) %>
          <%#= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 ? "#{@descriptions[n - 1]} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'value'}) %>
 
       </div>
