--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -27,7 +27,7 @@
 
       <div class="col-md-6">
          <% col = n.odd? ? ['#FF5733', '#075689'] : ['#C70039', '#50C214'] %>
-         <%= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 ? "#{@descriptions[n - 1]} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'percentage'}) %>
+         <%= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 || n == 9 ? "#{@descriptions[n - 1]} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'percentage'}) %>
          <%#= users_by_sex %>
       </div>
        <div class="col-md-6">
@@ -37,8 +37,15 @@
                      else    
                         @vrange = (vmax..vmin).to_a 
                      end %>
-        
-          <%= column_chart(@counts_by_genre[n - 1],  colors: ["#a48a9e"], library: {backgroundColor: "#eee", title: "Suggerimento per genere", vAxis: {ticks: @vrange}}) %>
+         <% custom_title = "Approccio positivo per genere" %>
+         <% if n == 8 %>
+              <% custom_title = "Suggerimento per genere" %>
+         <% elsif n == 10 %>
+              <% custom_title = "Consapevolezza per genere" %>
+         <% elsif n == 11 %>
+              <% custom_title = "Lettura per genere" %>
+         <% end %>     
+         <%= column_chart(@counts_by_genre[n - 1],  colors: ["#a48a9e"], library: {backgroundColor: "#eee", title: custom_title, vAxis: {ticks: @vrange}}) %>
          <%#= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 ? "#{@descriptions[n - 1]} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'value'}) %>
 
       </div>
