remove the plus from the title of the previous version of the app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
      <div class="container">
         <%= link_to root_path, class: 'navbar-brand' do %>
             <i class="fa fa-flask" ></i>
-          COLLABORA <strong>+</strong>
+          COLLABORA <!--<strong>+</strong> -->
           <% end %> 
        
           <!--<a href="#" class="navbar-brand">COLLABORAFARMACISOLA</a>-->
