change the main image of the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <%= image_tag "collabora_main_plus.png", size: "1000x300" %>
+        <%= image_tag "collabora_plus.png", size: "1000x300" %>
       </div>
      </div>  
     <!--<h1>Welcome to <span class="homeh1color1">C</span>OLLABORA<span class="homeh1color1">F</span>ARMAC<span class="homeh1color1">I</span>SOLA</h1>-->
