--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -199,3 +199,42 @@
     height: 1%; }
   *:first-child + html .digg_pagination {
     overflow: hidden; }
+    
+.jumbotron p{
+    line-height: 23px;
+}
+
+.pagination>li>a, .pagination>li>a>input{
+    background-color: #eeeeee;
+    color: #d9534f
+    ;
+}
+
+.jumbotron .survey_answer{
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+    color: #31708f;
+    font-size: 18px;
+}
+
+.jumbotron .summary{
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+    font-size: 18px;
+}
+
+h1.survey_index{
+    width: 350px;
+    float: left;
+    
+}
+
+.btn-lg.survey_index {
+    float: right;
+    margin-top: 15px;
+}
+
+span.glyphicon.glyphicon-plus{
+    margin-right: 3px;
+}
