change some labels related to the person interviewed

--- a/app/views/surveys/_intro.html.erb
+++ b/app/views/surveys/_intro.html.erb
@@ -14,7 +14,7 @@
 </div> <br/>
 
 <div class="input-group">
-<span class="label label-primary">Sesso:</span>
+<span class="label label-primary">Sesso stimato:</span>
 
  
 <div class="radio">
@@ -27,7 +27,7 @@
 </div>
 
 <div class="input-group">
-<span class="label label-primary">Fascia di Età:</span>
+<span class="label label-primary">Età stimata:</span>
     <div class="radio">
       <label><input type="radio" name="eta" value="18-30" <%= 'checked' if session[:eta] == "18-30" or session[:eta].nil? %>>18-30</label>
     </div>
