change a label of the table 'Elenco Interviste' in the sureys index view

--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -24,7 +24,7 @@
         <table class="member table table-bordered table-hover">
           <thead>
             <tr>
-              <th>Codice Questionario</th>
+              <th>Contatore</th>
               <th>Codice Utente</th>
               <!--<th class='icon'><i class="fa fa-eye fa-lg" aria-hidden="true"></i></th> 
               <th class='icon'><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i></th>-->
