change labels in index view and intro partial of the surveys group

--- a/app/views/surveys/_intro.html.erb
+++ b/app/views/surveys/_intro.html.erb
@@ -3,7 +3,7 @@
 <%= f.hidden_field :card, value: "aaa" %>
 <div class="input-group">
 <!--  <span class="input-group-addon" id="basic-addon1">Scheda Numero:</span> -->
-<span class="label label-primary">Scheda Numero:</span>
+<span class="label label-primary">Contatore:</span>
   <input type="text" class="form-control" placeholder="Scheda Numero" aria-describedby="basic-addon1" name="card_number" value='<%=session[:card_number]%>'>
 </div><br/>
 
