change title in each question partial view

--- a/app/views/surveys/_q1.html.erb
+++ b/app/views/surveys/_q1.html.erb
@@ -1,4 +1,4 @@
- <h3><span class="label label-danger">Question 1</span></h3><br/>
+ <h3><span class="label label-danger">Domanda 1</span></h3><br/>
  <%= f.hidden_field :uid, value: " " %>
  <%= f.hidden_field :card, value: session[:card_number] %>
  <%#= "Session: #{session[:card_number]}" %>
