--- a/app/views/surveys/_q5.html.erb
+++ b/app/views/surveys/_q5.html.erb
@@ -1,4 +1,4 @@
-<h3><span class="label label-danger">Question 5</span></h3><br/>
+<h3><span class="label label-danger">Domanda 5</span></h3><br/>
  <%= f.hidden_field :uid, value: " " %>
  <%#= "Session: #{session[:card_number]}" %>
  <h5><span class="label label-default">Nel caso si tratti di un farmaco generico</span></h5>
