--- a/app/views/surveys/_q13.html.erb
+++ b/app/views/surveys/_q13.html.erb
@@ -1,4 +1,4 @@
-<h3><span class="label label-danger">Question 13</span></h3><br/>
+<h3><span class="label label-danger">Domanda 13</span></h3><br/>
  <%= f.hidden_field :uid, value: " " %>
 
  <div class="field">
