--- a/app/views/surveys/_q2.html.erb
+++ b/app/views/surveys/_q2.html.erb
@@ -1,4 +1,4 @@
- <h3><span class="label label-danger">Question 2</span></h3><br/>
+ <h3><span class="label label-danger">Domanda 2</span></h3><br/>
  <%= f.hidden_field :uid, value: " " %>
  <%#= "Session: #{session[:card_number]}" %>
  <div class="field">
