--- a/app/views/surveys/_q3.html.erb
+++ b/app/views/surveys/_q3.html.erb
@@ -1,4 +1,4 @@
-<h3><span class="label label-danger">Question 3</span></h3><br/>
+<h3><span class="label label-danger">Domanda 3</span></h3><br/>
  <%= f.hidden_field :uid, value: " " %>
  <%#= "Session: #{session[:card_number]}" %>
  <div class="field">
