--- a/app/views/surveys/_q6.html.erb
+++ b/app/views/surveys/_q6.html.erb
@@ -1,4 +1,4 @@
-<h3><span class="label label-danger">Question 6</span></h3><br/>
+<h3><span class="label label-danger">Domanda 6</span></h3><br/>
  <%= f.hidden_field :uid, value: " " %>
  <div class="field">
    <p><%= @questions[9].qtext %></p>
