--- a/app/views/surveys/_q3.html.erb
+++ b/app/views/surveys/_q3.html.erb
@@ -30,7 +30,7 @@
  
 
 <div class="radio">
-  <label><input type="radio" name="answer03_1" value="Sì" <%= 'checked' if session[:answer03_1] == "Sì" or session[:answer03_1].nil? %> >Sì</label>
+  <label><input type="radio" name="answer03_1" value="Sì" <%= 'checked' if session[:answer03_1] == "Sì" %> >Sì</label>
 </div>
 <div class="radio">
   <label><input type="radio" name="answer03_1" value= "No" <%= 'checked' if session[:answer03_1] == "No" %> >No</label>
