--- a/app/views/surveys/_q14.html.erb
+++ b/app/views/surveys/_q14.html.erb
@@ -5,7 +5,7 @@
    <p><%= @questions[26].qtext %></p>
  </div>
  <div class="radio">
-  <label><input type="radio" name="answer14_0" value="Sì" <%= 'checked' if session[:answer14_0] == "Sì" or session[:answer14_0].nil? %> >Sì</label>
+  <label><input type="radio" name="answer14_0" value="Sì" <%= 'checked' if session[:answer14_0] == "Sì" %> >Sì</label>
 </div>
 <div class="radio">
   <label><input type="radio" name="answer14_0" value= "No" <%= 'checked' if session[:answer14_0] == "No" %> >No</label>
