--- a/app/views/surveys/_q5.html.erb
+++ b/app/views/surveys/_q5.html.erb
@@ -6,7 +6,7 @@
    <p><%= @questions[7].qtext %></p>
  </div>
  <div class="radio">
-  <label><input type="radio" name="answer05_0" value="Sì" <%= 'checked' if session[:answer05_0] == "Sì" or session[:answer05_0].nil? %> >Sì</label>
+  <label><input type="radio" name="answer05_0" value="Sì" <%= 'checked' if session[:answer05_0] == "Sì" %> >Sì</label>
 </div>
 <div class="radio">
   <label><input type="radio" name="answer05_0" value= "No" <%= 'checked' if session[:answer05_0] == "No" %> >No</label>
