--- a/app/views/surveys/_q9.html.erb
+++ b/app/views/surveys/_q9.html.erb
@@ -5,7 +5,7 @@
    <p><%= @questions[15].qtext %></p>
  </div>
  <div class="radio">
-  <label><input type="radio" name="answer09_0" value="Sì" <%= 'checked' if session[:answer09_0] == "Sì" or session[:answer09_0].nil? %> >Sì</label>
+  <label><input type="radio" name="answer09_0" value="Sì" <%= 'checked' if session[:answer09_0] == "Sì" %> >Sì</label>
 </div>
 <div class="radio">
   <label><input type="radio" name="answer09_0" value= "No" <%= 'checked' if session[:answer09_0] == "No" %> >No</label>
