change some features of the home view and of the partials confirmation, intro and index view of the group survey

--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -25,7 +25,7 @@
           <thead>
             <tr>
               <th>Contatore</th>
-              <th></th>
+              <!--<th></th> -->
               <!--<th class='icon'><i class="fa fa-eye fa-lg" aria-hidden="true"></i></th> 
               <th class='icon'><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i></th>-->
               <th class='icon'><i class="fa fa-eraser fa-lg" aria-hidden="true"></i></th>
@@ -35,7 +35,7 @@
           <tbody>
             <% @surveys.each do |survey| %>
               <tr>
-                <td><%= survey.card %></td>
+                <!--<td><%#= survey.card %></td> -->
                 <td><%= survey.uid %></td>
                 
                 <!--<td><%#= link_to 'Show', survey %></td>
