--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,9 +1,16 @@
+
+
 <div class="jumbotron text-center">
     <h1>Analisi degli Indicatori</h1>
     <!--<h4 class="stat">Approach change after the interviews</h4> -->
-</div>
+</div> <br/>
+<%= form_tag("/statistics", method: 'get', remote: true ) do %>
+    <% options = @locations.map{|l| l.upcase unless l.nil?} %>
+    <%= select_tag "area", options_for_select(options, options[0]), multiple: false, class: "selectpicker" %> <%= submit_tag("Invia", class: "btn btn-warning") %>
+<br/>
 
-<h3 class="stat brown">Problematiche riconducibili a farmaci equivalenti</h3>
+<div id="issues">
+<h3 class="stat brown"><%=@location.titleize %>: Problematiche riconducibili a farmaci equivalenti</h3>
 <div class=well>
   <div class="row">
       <div class="col-md-6">
@@ -19,7 +26,7 @@
 </div>    
 
 <% 1.upto(@num_of_indicators) do |n| %>
-    <h3 class="stat <%= cycle('black', 'green', 'brown') %> "><%= @descriptions[n - 1].capitalize %></h4>
+    <h3 class="stat <%= cycle('black', 'green', 'brown') %> "><%= @location.titleize %>: <%= @descriptions[n - 1].capitalize %></h4>
     <div class="well">
 
     <div class="row">
@@ -52,4 +59,6 @@
     </div>
 
     </div>
-    <% end %>    
+ <% end %>
+ </div>
+ <% end %>
