--- a/app/views/surveys/_intro.html.erb
+++ b/app/views/surveys/_intro.html.erb
@@ -9,8 +9,11 @@
 
 <div class="input-group">
 <!--  <span class="input-group-addon" id="basic-addon1">Luogo Raccolta: </span> -->
-  <span class="label label-primary">Luogo di Raccolta:</span>
-  <input type="text" class="form-control" placeholder="Luogo di raccolta" aria-describedby="basic-addon1" name="collection_point" value='<%=session[:collection_point]%>'>
+  <span class="label label-primary">Luogo di Raccolta:</span><br/>
+  <% options = ["medio campidano", "cagliari", "oristano", "nuoro", "sassari", "altro"] %>
+  <%= select_tag "collection_point", options_for_select(options, session[:collection_point]), multiple: false, class: "selectpicker" %><br/><br/>
+
+<!--  <input type="text" class="form-control" placeholder="Luogo di raccolta" aria-describedby="basic-addon1" name="collection_point" value='<%#=session[:collection_point]%>'> -->
 </div> <br/>
 
 <div class="input-group">
