add a massive set of changes to manage i8 subindicators and indicators by location

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -254,3 +254,39 @@ fieldset
   -webkit-border-radius:8px;	
   border-radius:8px;	
 }
+
+div.s1{
+    width: 24px;
+    height: 12px;
+    background-color: #c70039;
+}
+
+div.s2{
+    width: 24px;
+    height: 12px;
+    background-color: #50c214;
+}
+
+div.s3{
+    width: 24px;
+    height: 12px;
+    background-color: #075689;
+}
+
+div.s4{
+    width: 24px;
+    height: 12px;
+    background-color: #ff5733;
+}
+
+div.s5{
+    width: 24px;
+    height: 12px;
+    background-color: #ff9900;
+}
+
+div.s6{
+    width: 24px;
+    height: 12px;
+    background-color: #64360d;
+}
