--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,5 +1,4 @@
 
-
 <div class="jumbotron text-center">
     <h1>Analisi degli Indicatori</h1>
     <!--<h4 class="stat">Approach change after the interviews</h4> -->
@@ -10,7 +9,7 @@
 <br/>
 
 <div id="issues">
-<h3 class="stat brown"><%=@location.titleize %>: Problematiche riconducibili a farmaci equivalenti</h3>
+<h3 class="stat brown"><%=@location.titleize %>: Problematiche Riconducibili A Farmaci Equivalenti</h3>
 <div class=well>
   <div class="row">
       <div class="col-md-6">
@@ -34,7 +33,7 @@
 
       <div class="col-md-6">
          <% col = n.odd? ? ['#FF5733', '#075689'] : ['#C70039', '#50C214'] %>
-         <%= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 || n == 9 ? "#{@descriptions[n - 1]} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'percentage'}) %>
+         <%= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 || n == 9 ? "#{@descriptions[n - 1].capitalize} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'percentage'}) %>
          <%#= users_by_sex %>
       </div>
        <div class="col-md-6">
@@ -54,10 +53,38 @@
          <% end %>     
          <%= column_chart(@counts_by_genre[n - 1],  colors: ["#a48a9e"], library: {backgroundColor: "#eee", title: custom_title, vAxis: {ticks: @vrange}}) %>
          <%#= pie_chart(@icounts[n - 1], colors: col, library: {title: n < 8 ? "#{@descriptions[n - 1]} - modifica approccio dopo il colloquio" : "#{@descriptions[n - 1]}", pieSliceText: 'value'}) %>
-
       </div>
     </div>
+    <% if n == 8 %>
+        <% chart_title = "Tipologia di suggerimento (%)" %>
+          <div class = "row">
+              <div class="col-md-6">
+                <%= bar_chart(@subindicators, colors: ["#c70039", "#50c214", "#075689", "#ff5733", "#ff9900", "#64360D"], library: {backgroundColor: "#eee", title: chart_title, bar: {groupWidth: '100%'}}) %> 
+              </div>
+              <div class="col-md-6">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">Simbolo</th>
+                      <th scope="col">Suggerimento</th>
+                      <th scope="col">Significato</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <% idx = 1; @subindicator_descriptions.each do |sd| %>
+                    <tr>
+                        <td><div class='<%= "s#{idx}"%>'></div></td>
+                        <td><strong></b><%= "s#{idx}" %></strong></td>
+                        <td><%= sd %></td>                    
+                    </tr>
+                  <% idx += 1 %>     
+                  <% end %>    
+                  </tbody>
+                 </table>  
+              </div>
+        </div>    
 
+    <% end %>    
     </div>
  <% end %>
  </div>
