change some details in the statistics views

--- a/app/views/statistics/_issues.html.erb
+++ b/app/views/statistics/_issues.html.erb
@@ -31,7 +31,7 @@
                          end %>
              <% custom_title = "Approccio positivo per genere" %>
              <% if n == 8 %>
-                  <% custom_title = "Suggerimento per genere" %>
+                  <% custom_title = "Suggerimenti per genere" %>
              <% elsif n == 10 %>
                   <% custom_title = "Consapevolezza per genere" %>
              <% elsif n == 11 %>
