change the age ranges labels

--- a/app/views/surveys/_intro.html.erb
+++ b/app/views/surveys/_intro.html.erb
@@ -32,22 +32,22 @@
 <div class="input-group">
 <span class="label label-primary">Età stimata:</span>
     <div class="radio">
-      <label><input type="radio" name="eta" value="18-30" <%= 'checked' if session[:eta] == "18-30" %>>18-30</label>
+      <label><input type="radio" name="eta" value="18-30" <%= 'checked' if session[:eta] == "18-30" %>>&nbsp; 18-30</label>
     </div>
     <div class="radio">
-      <label><input type="radio" name="eta" value="30-40" <%= 'checked' if session[:eta] == "30-40" %>>30-40</label>
+      <label><input type="radio" name="eta" value="30-40" <%= 'checked' if session[:eta] == "30-40" %>>>30-40</label>
     </div>
     <div class="radio">
-      <label><input type="radio" name="eta" value="40-50" <%= 'checked' if session[:eta] == "40-50" %>>40-50</label>
+      <label><input type="radio" name="eta" value="40-50" <%= 'checked' if session[:eta] == "40-50" %>>>40-50</label>
     </div>
     <div class="radio">
-      <label><input type="radio" name="eta" value="50-60" <%= 'checked' if session[:eta] == "50-60" %>>50-60</label>
+      <label><input type="radio" name="eta" value="50-60" <%= 'checked' if session[:eta] == "50-60" %>>>50-60</label>
     </div>
     <div class="radio">
-      <label><input type="radio" name="eta" value="60-70" <%= 'checked' if session[:eta] == "60-70" %>>60-70</label>
+      <label><input type="radio" name="eta" value="60-70" <%= 'checked' if session[:eta] == "60-70" %>>>60-70</label>
     </div>
     <div class="radio">
-      <label><input type="radio" name="eta" value=">70" <%= 'checked' if session[:eta] == ">70" %>>&nbsp; >70</label>
+      <label><input type="radio" name="eta" value=">70" <%= 'checked' if session[:eta] == ">70" %>>>70</label>
     </div>    
 </div>
 
