--- a/app/views/questions/_qshow.html.erb
+++ b/app/views/questions/_qshow.html.erb
@@ -1,7 +1,3 @@
-<%# require 'pry' %>
-<%#="Area: #{locals[:zone].upcase}"%>
-<%#= "Numero uids: #{locals[:uids].length}" %>
-<%#= "uids: #{locals[:uids]}"%>
 <div class="row">
   
     <div class="col-md-8">
@@ -91,7 +87,7 @@
              
              <%= pie_chart(@counts, library: {sliceVisibilityThreshold: 1/1000}) %>
              <%# binding.pry %>
-             <%= pie_chart(@counts, library: {sliceVisibilityThreshold: 1/1000, pieSliceText: 'value'}) %>
+             <%#= pie_chart(@counts, library: {sliceVisibilityThreshold: 1/1000, pieSliceText: 'value'}) %>
          <% end %>
     </div><br/>    
     
