--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -59,9 +59,10 @@
             <h1 class='text-primary'>Risposte</h1> <br/>
               
              <% if @question.qid == 3 %>
-                 <%= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '0'}}) %>
+                 <%# keys = @count_drugs.keys[1..4]; @count_drugs = @count_drugs.slice(*keys)%>
+                 <%= bar_chart(@count_drugs, id: "bc1_q3", colors: ["green", "#29970E"], library: {height: "900", chartArea: {width: '60%', height: '80%'},  backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 10}}}) %>
                 <%#= bar_chart(@count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'red', fontSize: 10}}}) %>             
-                 <%= bar_chart(@count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica"}) %> 
+                 <%= bar_chart(@count_categories, id: "bc2_q3", colors: ["purple", "#4C0E97  "], library: {height: "900", chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", vAxis: {textStyle:{fontSize: 10}}}) %> 
                 <%#= bar_chart(@count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>             
             
     
@@ -90,7 +91,7 @@
              <% else %>
               <%# binding.pry %>
                  
-                 <%= pie_chart(@counts, library: {sliceVisibilityThreshold: 1/1000}) %>
+                 <%= pie_chart(@counts, id: "qxx", library: {sliceVisibilityThreshold: 1/1000}) %>
                  <%# binding.pry %>
                  <%#= pie_chart(@counts, library: {sliceVisibilityThreshold: 1/1000, pieSliceText: 'value'}) %>
              <% end %>
@@ -99,29 +100,30 @@
     </div>
     
         <% @subquestions.each do |sq| %>
-        <div class="col-md-8">
-            <h1 class="h1 question"><%="Sottodomanda #{@subq_mapping[sq.subid]}"%></h1>
-            <div class="well question-block subquestion-description">
-                <h3>Descrizione</h3>
-                <%= sq.qtext %>
+        <div class='row'>
+            <div class="col-md-8">
+                <h1 class="h1 question"><%="Sottodomanda #{@subq_mapping[sq.subid]}"%></h1>
+                <div class="well question-block subquestion-description">
+                    <h3>Descrizione</h3>
+                    <%= sq.qtext %>
+                </div>
+                
+                <table class="table table-condensed table-hover">
+                    <tbody>
+                      <% @suboptions.each do |sopt| %>
+                            <% if sopt.subid == sq.subid %>  
+                                <tr class="<%= cycle('active', 'success', 'warning', 'danger', 'info')%>">
+                                <td><i class="fa fa-hand-o-right" aria-hidden="true"></i></td>    
+                                 <td>
+                                   <%= "#{sopt.odescription}" %>   
+                                 </td>
+                                </tr>
+                            <% end %>    
+                      <% end %>
+                    </tbody>  
+                </table>        
             </div>
-            
-            <table class="table table-condensed table-hover">
-                <tbody>
-                  <% @suboptions.each do |sopt| %>
-                        <% if sopt.subid == sq.subid %>  
-                            <tr class="<%= cycle('active', 'success', 'warning', 'danger', 'info')%>">
-                            <td><i class="fa fa-hand-o-right" aria-hidden="true"></i></td>    
-                             <td>
-                               <%= "#{sopt.odescription}" %>   
-                             </td>
-                            </tr>
-                        <% end %>    
-                  <% end %>
-                </tbody>  
-            </table>        
         </div>
-        
         <div class = "row">
         <div class="col-md-8">
             <h1 class='text-primary'>Risposte</h1>
@@ -129,23 +131,26 @@
              <% if (@subquestion_idx.include? sq.qid)  && sq.subid == 1 %>
                 <% count_drugs, count_categories = sub_count(sq.qid, sq.subid, @uids)[1..2] %>
                 <%#= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{color: 'blue', fontSize: 10}}}) %>             
-                <%= bar_chart(count_drugs, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>
-                <%= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 5}}}) %>             
-                <%#= bar_chart(count_categories, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", height: 1700,  bar: {groupWidth: "55%"}, chartArea: {height: '95%'}, vAxis: {textStyle:{fontSize: 10}}}) %>         
-             
+                <% unless sq.qid == 7 %>
+                    <%= bar_chart(count_drugs, id: "bc1_q7s1", colors: ["green", "#29970E"], library: {height: "900", chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 10}}}) %>
+                    <%= bar_chart(count_categories, id: "bc2_q7s1", colors: ["purple", "#4C0E97  "], library: {height: "900", chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 10}}}) %>             
+                <% else %>
+                    <%= bar_chart(count_drugs, id: "bc1_qxx", colors: ["green", "#29970E"], library: {height: "280", chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Nome Farmaco", hAxis: {format: '#'}, vAxis: {textStyle:{fontSize: 10}}}) %>
+                    <%= bar_chart(count_categories, id: "bc2_qxx", colors: ["purple", "#4C0E97  "], library: {height: "280", chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Categoria Farmacoterapeutica", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 10}}}) %>             
+                <% end %> 
              <% elsif sq.qid == 8%>
                  <% count_prescriber, count_changer, count = get_prescriber(sq.qid, sq.subid, @uids) %>
                  <%# binding.pry %>
-                 <%= column_chart(count_prescriber, colors: ["green", "#29970E"], library: {backgroundColor: "#eee", title: "Prescrittore della terapia"} ) %>
-                 <%= column_chart(count_changer, colors: ["purple", "#4C0E97  "], library: {backgroundColor: "#eee", title: "Modificatore della terapia"}) %>
-                 <%= bar_chart(count, colors: ["orange"], library: {backgroundColor: "#eee", title: "Prescrittore e Modificatore della terapia"})%>
+                 <%= column_chart(count_prescriber, id: "cc1_qxx", colors: ["green", "#29970E"], library: {height: "290", chartArea: {width: '60%', height: '70%'}, vAxis: {format: '0'}, backgroundColor: "#eee", title: "Prescrittore della terapia"} ) %>
+                 <%= column_chart(count_changer, id: "cc2_qxx",colors: ["purple", "#4C0E97  "], library: {height: "290", chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Modificatore della terapia"}) %>
+                 <%= bar_chart(count, id: "bc3_qxx", colors: ["orange"], library: {chartArea: {width: '60%', height: '80%'}, backgroundColor: "#eee", title: "Prescrittore e Modificatore della terapia", hAxis: {format: '0'}, vAxis: {textStyle:{fontSize: 10}}})%>
              <% else %>
                  <% counts = sub_count(sq.qid, sq.subid, @uids)[0] %>
                  <%# binding.pry %>
                  <% if counts.keys.length < 3 %>
                      <%= pie_chart(counts) %>
                  <% else %>
-                     <%= column_chart(counts,  colors: ["lightcoral", "#F08080"], library: {backgroundColor: "#eee"}) %>
+                     <%= column_chart(counts,  id: "cc_qxx", colors: ["lightcoral", "#F08080"], library: {backgroundColor: "#eee"}) %>
                 <% end %>
             <% end %>  
     
