restrict the number of questions

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,7 +4,7 @@
         <!--<p>Questions to evaluate the side effects of drugs used in Sardinia</p>-->
         <ul class="list-unstyled">
  
-            <% 1.upto(@num_of_questions).each do |idx| %>
+            <% 11.upto(@num_of_questions-1).each do |idx| %>
                  <li>
                     <div class="well row <%=cycle('q-bg', '')%>">
                          <div class="col-md-2 text-center">
