--- a/app/views/surveys/_q16.html.erb
+++ b/app/views/surveys/_q16.html.erb
@@ -5,13 +5,13 @@
    <p><%= @questions[24].qtext %></p>
  </div>
  <div class="radio">
-  <label><input type="radio" name="answer16_0" value="Sì" <%= 'checked' if session[:answer16_0] == "Sì" %> >Sì</label>
+  <label><input type="radio" name="answer16_0" value="più di prima dell'emergenza" <%= 'checked' if session[:answer16_0] == "più di prima dell'emergenza" %> >più di prima dell'emergenza</label>
 </div>
 <div class="radio">
-  <label><input type="radio" name="answer16_0" value= "No" <%= 'checked' if session[:answer16_0] == "No" %> >No</label>
+  <label><input type="radio" name="answer16_0" value= "meno di prima dell'emergenza" <%= 'checked' if session[:answer16_0] == "meno di prima dell'emergenza" %> >meno di prima dell'emergenza</label>
 </div>
 <div class="radio">
-  <label><input type="radio" name="answer16_0" value= "Non saprei" <%= 'checked' if session[:answer16_0] == "Non saprei" %> >Non saprei</label>
+  <label><input type="radio" name="answer16_0" value= "come prima dell'emergenza" <%= 'checked' if session[:answer16_0] == "come prima dell'emergenza" %> >come prima dell'emergenza</label>
 </div><br/>
 <div class="row">
     <div class="col-md-6">
