extend to the changes of the show view to qshow partial

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -113,7 +113,7 @@
                     <tbody>
                       <%# @suboptions.each do |sopt| %>
                             <%# if sopt.subid == sq.subid %>  
-                                <tr class="<%= cycle('active', 'success', 'warning', 'danger', 'info')%>">
+                                <tr class="<%#= cycle('active', 'success', 'warning', 'danger', 'info')%>">
                                 <td><i class="fa fa-hand-o-right" aria-hidden="true"></i></td>    
                                  <td>
                                    <%#= "#{sopt.odescription}" %>   
