update intro partial of the inteviews with new field labels

--- a/app/views/surveys/_intro.html.erb
+++ b/app/views/surveys/_intro.html.erb
@@ -17,7 +17,7 @@
 </div> <br/>
 
 <div class="input-group">
-<span class="label label-primary">Sesso stimato:</span>
+<span class="label label-primary">Sesso:</span>
 
  
 <div class="radio">
@@ -30,7 +30,7 @@
 </div>
 
 <div class="input-group">
-<span class="label label-primary">Età stimata:</span>
+<span class="label label-primary">Fascia di età:</span>
     <div class="radio">
       <label><input type="radio" name="eta" value="18-30" <%= 'checked' if session[:eta] == "18-30" %>>&nbsp; 18-30</label>
     </div>
