--- a/app/views/users/_by_area.html.erb
+++ b/app/views/users/_by_area.html.erb
@@ -13,15 +13,16 @@
   </div>
 </div><br/>
 
-<% if locals[:zone] == "medio campidano" %>
-
+<%# if locals[:zone] == "sud sardegna" %>
+<!-- removed for all the provinces 
      <div class="jumbotron">
-        <h2>Area Geografica: <span class='homeh1color1'><%= " #{locals[:zone]}" %></span></h2>
+        <h2>Area Geografica: <span class='homeh1color1'><%#= " #{(locals[:zone]).upcase}" %></span></h2>
     </div>
     
     <div class="row">
          <div class"col-md-6">
-             <%= users_by_place %>
+             <%#= users_by_place %>
          </div>
      </div>
-<% end %>
+     --->
+<%# end %>
