--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,14 +20,14 @@
           </div>
         </div><br/>
     
-    
-        <div class="jumbotron">
-            <h2>Area geografica: <span class='homeh1color1'><%= @location.upcase %></span></h2>
+  <!-- removed for all the provinces -->  
+       <!-- <div class="jumbotron">
+            <h2>Area geografica: <span class='homeh1color1'><%#= @location.upcase %></span></h2>
         </div>
     
         <div class="row">
              <div class"col-md-6">
-                 <%= users_by_place %>
+                 <%#= users_by_place %>
              </div>
          </div>
     </div>
